--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -4,14 +4,14 @@
 	xmlns:mvc="sap.ui.core.mvc"
 	displayBlock="true">
 	<Shell>
-		<App class="myAppDemoWT">
-			<pages>
+		<App class="myAppDemoWT" id="app">
+			<!-- <pages>
 				<Page title="{i18n>homePageTitle}">
 					<content>
 						<mvc:XMLView viewName="sap.ui.demo.walkthrough.view.StaffList"/>
 					</content>
 				</Page>
-			</pages>
+			</pages> -->
 		</App>
 	</Shell>
 </mvc:View>
